--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "gensim>=4.4.0",
     "google-generativeai>=0.8.5",
     "httpx>=0.28.1",
     "ipykernel>=7.1.0",
+    "kmeans>=1.0.2",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
+    "pca>=2.10.1",
     "plotly>=6.5.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
